--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
-{% include head.html %}
-
-<body>
-    {% if page.language_tabs %}
-    <div class="content-container">
-        <div class="language-tabs">
-            <a class='hide-btn' id="hide-button" title="{% t global.toggle_right %}">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </a>
-            <ul class="language-buttons">
-                {% for lang in page.language_tabs %}
-                <li>
-                    <a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div class="dark-box"></div>
-        <div class="overlay"></div>
+    {% include head.html %}
+    <body>
+        {% if page.language_tabs %}
+        <div class="content-container">
+            <div class="language-tabs">
+                <a class='hide-btn' id="hide-button" title="{% t global.toggle_right %}"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                <ul class="language-buttons">
+                    {% for lang in page.language_tabs %}
+                    <li><a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="dark-box"></div>
+            <div class="overlay"></div>
         {% else %}
         <div class="content-container no-dark-box">
-            {% endif %}
+        {% endif %}
             <div id="submenu">
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
@@ -32,15 +27,16 @@
                             <div class="lang">
                                 <span>{% t global.languages %}</span>
 
-                                {% for lang in site.language_names %} {% if lang[0] == site.default_lang %}
-                                <a href="{{ site.baseurl_root }}{{page.url}}">
+                                {% for lang in site.language_names %}
+                                    {% if lang[0] == site.default_lang %}
+                                    <a href="{{ site.baseurl_root }}{{page.url}}">
                                     {% else %}
                                     <a href="{{ site.baseurl_root }}/{{ lang[0] }}{{page.url}}">
-                                        {% endif %}
+                                    {% endif %}
 
-                                        <img alt="{{ lang[1] }}" src="{{ site.baseurl }}/assets/images/{{ lang[0] }}.png" />
+                                        <img alt="{{ lang[1] }}" src="{{ site.baseurl }}/assets/images/{{ lang[0] }}.png"/>
                                     </a>
-                                    {% endfor %}
+                                {% endfor %}
                             </div>
                             {% endif %}
                         </div>
@@ -55,68 +51,65 @@
                             <ul class="search-results"></ul>
                         </div>
                     </div>
-                    {% else %}
-                </div>
-                {% endif %}
+                        {% else %}
+                    </div>
+                        {% endif %}
 
-                <div class="submenu-row breads">
-                    <ol class="breadcrumb">
-                        {% if site.lang == site.default_lang %}
-                        <li>
-                            <a href="/">{% t global.home %}</a>
-                        </li>
-                        {% else %}
-                        <li>
-                            <a href="{{ site.baseurl_root }}/{{ site.lang }}/">{% t global.home %}</a>
-                        </li>
-                        {% endif %} {% assign crumbs = page.url | split: '/' %} {% assign crumbs_total = crumbs | size | minus: 1 %} {% for crumb
-                        in crumbs offset: 1 %} {% if forloop.index == crumbs_total %} {% if site.lang == site.default_lang
-                        %}
-                        <li class="active">&gt;
-                            <a href="{{ site.baseurl_root }}{{ page.url }}">{{page.title}}</a>
-                        </li>
-                        {% else %}
-                        <li class="active">&gt;
-                            <a href="{{ site.baseurl_root }}/{{ site.lang }}{{ page.url }}">{{page.title}}</a>
-                        </li>
-                        {% endif %} {% else %} {% assign crumb_limit = forloop.index | plus: 1 %} {% capture crumb_url %}{% for c in crumbs limit:
-                        crumb_limit %}{{ c | append: '/' }}{% endfor %}{% endcapture %} {% capture crumb_with_index %}{{
-                        crumb_url | append: 'index.html' }}{% endcapture %} {% capture current_page %}{{ site.baseurl }}{{
-                        page.url }}{% endcapture %} {% for p in site.pages %} {% if crumb_with_index != current_page and
-                        crumb_with_index == p.url %}
-                        <li>&gt;
-                            <a href="{{ crumb_with_index }}">{{ crumb | replace:'-',' ' | capitalize}}</a>
-                            {% endif %} {% endfor %} {% endif %} {% endfor %}
-                    </ol>
+                    <div class="submenu-row breads">
+                        <ol class="breadcrumb">
+                            {% if site.lang == site.default_lang %}
+                            <li><a href="/">{% t global.home %}</a></li>
+                            {% else %}
+                            <li><a href="{{ site.baseurl_root }}/{{ site.lang }}/">{% t global.home %}</a></li>
+                            {% endif %}
+                            {% assign crumbs = page.url | split: '/' %}
+                            {% assign crumbs_total = crumbs | size | minus: 1 %}
+                            {% for crumb in crumbs offset: 1 %}
+                                {% if forloop.index == crumbs_total %}
+                                    {% if site.lang == site.default_lang %}
+                                    <li class="active">&gt; <a href="{{ site.baseurl_root }}{{ page.url }}">{{page.title}}</a></li>
+                                    {% else %}
+                                    <li class="active">&gt; <a href="{{ site.baseurl_root }}/{{ site.lang }}{{ page.url }}">{{page.title}}</a></li>
+                                    {% endif %}
+                                {% else %}
+                                    {% assign crumb_limit = forloop.index | plus: 1 %}
+                                    {% capture crumb_url %}{% for c in crumbs limit: crumb_limit %}{{ c | append: '/' }}{% endfor %}{% endcapture %}
+                                    {% capture crumb_with_index %}{{ crumb_url | append: 'index.html' }}{% endcapture %}
+                                    {% capture current_page %}{{ site.baseurl }}{{ page.url }}{% endcapture %}
+                                    {% for p in site.pages %}
+                                        {% if crumb_with_index != current_page and crumb_with_index == p.url %}
+                                            <li>&gt; <a href="{{ crumb_with_index }}">{{ crumb | replace:'-',' ' | capitalize}}</a>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </ol>
+                    </div>
                 </div>
             </div>
+
+            {{ content }}
+
+            {% include footer.html tags=post.tags %}
         </div>
 
-        {{ content }} {% include footer.html tags=post.tags %}
-    </div>
+        {% include sidebar.html %}
 
-    {% include sidebar.html %}
-
-    <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/jquery-ui-1.9.1.custom.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/bootstrap.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/jquery.tocify.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/prettify.js"></script>
-    <script>
-        $(function () {
+        <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/jquery-ui-1.9.1.custom.min.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/bootstrap.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/jquery.tocify.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/prettify.js"></script>
+        <script>
+        $(function() {
             var openedHeader = null;
 
             $("#toc").tocify({
-                { %
-                    if page.layout == "faq" %
-                }
+                {% if page.layout == "faq" %}
                 selectors: "h1",
-                { %
-                    else %
-                }
+                {% else %}
                 selectors: "h1,h2,h3,h4,h5,h6",
-                { % endif %
-                }
+                {% endif %}
                 hashGenerator: "pretty",
                 ignoreSelector: ".no-toc",
                 scrollTo: 100,
@@ -135,47 +128,42 @@
                 openedHeader.find('ul:visible').prev('li').addClass('is-open');
             });
 
-            $('.hamburger').click(function () {
+            $('.hamburger').click(function() {
                 $('body').toggleClass('sidebar-closed');
             });
 
-            $('.code-menu').click(function () {
+            $('.code-menu').click(function() {
                 $('body').toggleClass('code-menu-closed');
             });
 
             prettyPrint();
         });
-    </script>
+        </script>
 
-    {% if page.search %}
-    <script src="{{ site.baseurl }}/assets/js/jquery.highlight.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/lunr.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/search.js"></script>
-    {% endif %} {% if page.language_tabs %}
-    <script>
+        {% if page.search %}
+        <script src="{{ site.baseurl }}/assets/js/jquery.highlight.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/lunr.js"></script>
+        <script src="{{ site.baseurl }}/assets/js/search.js"></script>
+        {% endif %}
+
+        {% if page.language_tabs %}
+        <script>
         let langs = '';
 
-        if (window.location.href.indexOf('antifraude') !== -1) {
-            $('div.highlighter-rouge').prepend(
-                '<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>'
-            );
-
-            $('div.highlighter-rouge').each(function (index) {
-                if (!$(this).parent().hasClass('language-group')) {
-                    $(this).first().next('div.highlighter-rouge').andSelf().wrapAll(
-                        '<div class="code-fullscreen"><div class="language-group"></div></div>');
-                }
-            });
-        }
+        $('div.highlighter-rouge').prepend( '<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>' );
+        $('div.highlighter-rouge').each(function (index) {
+            if(!$(this).parent().hasClass('language-group')) {
+                $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
+            }
+        });
 
         $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
             let height = $(this).outerHeight();
 
-            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' +
-                height + 'px;"></div> ');
+            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + height + 'px;"></div> ');
         });
 
-        $('.hide-btn').click(function () {
+        $('.hide-btn').click(function() {
             $('.content-container').toggleClass('no-dark-box');
             $('.dark-box').toggle();
 
@@ -183,50 +171,36 @@
             $('.code-fullscreen').removeClass('opened');
         });
 
-        $('.expand-btn').click(function () {
+        $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
             $(this).children('i.fa').toggleClass('fa-compress');
         });
 
-        { %
-            for lang in page.language_tabs %
-        }
-        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>"; { % endfor %
-        }
+        {% for lang in page.language_tabs %}
+        langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
+        {% endfor %}
 
         $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
-    </script>
+        </script>
 
-    <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
-    <script>
-        $(function () {
-            setupLanguages([{ %
-                    for lang in page.language_tabs %
-                }
-                "{{ lang[0] }}", { % endfor %
-                }
-            ]);
-        });
-    </script>
-    <!-- Hotjar Tracking Code for https://developercielo.github.io/ -->
-    <script>
-        (function (h, o, t, j, a, r) {
-            h.hj = h.hj || function () {
-                (h.hj.q = h.hj.q || []).push(arguments)
-            };
-            h._hjSettings = {
-                hjid: 674586,
-                hjsv: 6
-            };
-            a = o.getElementsByTagName('head')[0];
-            r = o.createElement('script');
-            r.async = 1;
-            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-    </script>
-    {% endif %}
-</body>
-
+        <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
+        <script>
+            $(function() {
+                setupLanguages([ {% for lang in page.language_tabs %} "{{ lang[0] }}", {% endfor %}]);
+            });
+        </script>
+         <!-- Hotjar Tracking Code for https://developercielo.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+        {% endif %}
+    </body>
 </html>
