--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -149,8 +149,10 @@
         {% if page.language_tabs %}
         <script>
         let langs = '';
+        let langsArray = [];
 
-        $('div.highlighter-rouge').prepend( '<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>' );
+        $('div.highlighter-rouge').prepend('<a class="fa expand-btn" title="{% t global.toggle_code %}"><i class="fa fa-expand" aria-hidden=true></i></a>');
+
         $('div.highlighter-rouge').each(function (index) {
             if(!$(this).parent().hasClass('language-group')) {
                 $(this).first().next('div.highlighter-rouge').andSelf().wrapAll('<div class="code-fullscreen"><div class="language-group"></div></div>');
@@ -179,6 +181,7 @@
 
         {% for lang in page.language_tabs %}
         langs += "<a data-language-name='{{ lang[0] }}'>{{ lang[1] }}</a>";
+        langsArray.push('{{ lang[0] }}');
         {% endfor %}
 
         $('.language-group').prepend('<div class="language-buttons">' + langs + '</div>');
@@ -187,6 +190,24 @@
         <script src="{{ site.baseurl }}/assets/js/lang.js"></script>
         <script>
             $(function() {
+                $('.language-buttons').each(function() {
+                    let parent = $(this).parent();
+
+                    langsArray.forEach((v) => {
+                        if(parent.find('.language-' + v).length === 0) {
+                            $(this).find('[data-language-name="' + v + '"]').remove();
+
+                            let firstItem = $(this).children().first();
+                            firstItem.addClass('active');
+                            parent.find('.language-' + firstItem.attr('data-language-name')).first().show();
+                            
+                            if(parent.children('[class^="language-"]').length === 2) {
+                                parent.addClass('lock');
+                            }
+                        }
+                    });
+                });
+
                 setupLanguages([ {% for lang in page.language_tabs %} "{{ lang[0] }}", {% endfor %}]);
             });
         </script>
