--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -159,11 +159,13 @@
             }
         });
 
-        $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
-            let height = $(this).outerHeight();
-
-            $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + height + 'px;"></div> ');
-        });
+        {% if page.language_tabs %}
+        if ( $(window).width() >= 1660) {
+            $('.content-container:not(.no-dark-box) div.highlighter-rouge').each(function (index) {
+                $(this).parent().parent().next('table').wrapAll('<div class="table-wrap" style="min-height:' + $(this).outerHeight() + 'px;"></div> ');
+            });
+        }
+        {% endif %}
 
         $('.hide-btn').click(function() {
             $('.content-container').toggleClass('no-dark-box');
@@ -200,7 +202,7 @@
                             let firstItem = $(this).children().first();
                             firstItem.addClass('active');
                             parent.find('.language-' + firstItem.attr('data-language-name')).first().show();
-                            
+
                             if(parent.children('[class^="language-"]').length === 2) {
                                 parent.addClass('lock');
                             }
@@ -211,17 +213,8 @@
                 setupLanguages([ {% for lang in page.language_tabs %} "{{ lang[0] }}", {% endfor %}]);
             });
         </script>
-         <!-- Hotjar Tracking Code for https://developercielo.github.io/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:674586,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
         {% endif %}
+
+        {% include hotjar.html %}
     </body>
 </html>
