--- a/en/assets/css/custom.css
+++ b/en/assets/css/custom.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500');
-
 body
 {
   font-family: 'Fira Sans', Helvetica, Arial, sans-serif;
@@ -991,6 +989,11 @@ a.help {
 .footer-conteudo h1 {
     margin: 0;
     font-weight: normal;
+}
+
+#footer-conteudo-texto h2 {
+    margin-bottom: 0px;
+    margin-top: 22px;
 }
 
 #footer-conteudo-img img {
