--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
       <a title="{% t global.toggle_left %} {% t global.sidebar %}" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="{{ site.baseurl }}/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}">
       </a>
       <div></div>
