--- a/_layouts/cielo.html
+++ b/_layouts/cielo.html
@@ -21,7 +21,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">{% t global.support %}</a>
+                            <a href="https://devcielo.zendesk.com/hc/pt-br#suporte" class="help">{% t global.support %}</a>
 
                             {% if page.translated %}
                             <div class="lang">
